--- a/antena orbital.html
+++ b/antena orbital.html
@@ -20,14 +20,10 @@
   <main>
     <section class="content">
       <h2>Penjelasan Tentang Antena</h2>
-      <img src="antena orbital.PNG" alt="Antena BRIN" class="image">
-      <p>
-        Antena adalah perangkat yang digunakan untuk memancarkan atau menerima gelombang elektromagnetik.
-        Dalam penelitian BRIN, antena berperan penting untuk komunikasi, radar, dan penginderaan jauh.
-      </p>
-      <p>
-        BRIN terus mengembangkan antena modern seperti antena mikrostrip, antena array, dan antena adaptif
-        untuk meningkatkan efisiensi komunikasi nirkabel dan teknologi satelit.
+      <img src="antena1 orbital.PNG" alt="Antena BRIN" class="image">
+      <p style="text-align: justify">
+Antena Orbital di KSL Stasiun Bumi Parepare milik BRIN (Badan Riset dan Inovasi Nasional) adalah salah satu perangkat penerima data satelit penginderaan jauh. Antena ini secara spesifik berfungsi untuk menerima data dari satelit-satelit yang menyediakan resolusi rendah. Data resolusi rendah ini memiliki cakupan area yang sangat luas, menjadikannya ideal untuk aplikasi pemantauan berskala besar dan pemantauan cepat, seperti pemantauan cuaca, atmosfer, deteksi awal bencana alam seperti kebakaran hutan dan banjir di wilayah yang sangat luas, serta pemetaan awal tutupan lahan regional. Keberadaan antena Orbital ini melengkapi kemampuan stasiun bumi tersebut dalam menyediakan data satelit dengan spektrum resolusi yang lengkap, dari rendah hingga tinggi.
+
       </p>
       <a href="index.html" class="btn">Kembali ke Beranda</a>
     </section>
