--- a/antena viasat.html
+++ b/antena viasat.html
@@ -20,14 +20,9 @@
   <main>
     <section class="content">
       <h2>Penjelasan Tentang Antena</h2>
-      <img src="antena viasat.PNG" alt="Antena BRIN" class="image">
-      <p>
-        Antena adalah perangkat yang digunakan untuk memancarkan atau menerima gelombang elektromagnetik.
-        Dalam penelitian BRIN, antena berperan penting untuk komunikasi, radar, dan penginderaan jauh.
-      </p>
-      <p>
-        BRIN terus mengembangkan antena modern seperti antena mikrostrip, antena array, dan antena adaptif
-        untuk meningkatkan efisiensi komunikasi nirkabel dan teknologi satelit.
+      <img src="antena1 viasat.PNG" alt="Antena BRIN" class="image">
+     <p style="text-align: justify">
+       Antena Viasat adalah antena parabola dua arah yang digunakan untuk mengakses internet melalui satelit milik perusahaan Viasat Inc. Antena ini berfungsi mengirim dan menerima sinyal data antara pengguna dan satelit geostasioner yang terhubung ke jaringan internet global. Komponen utamanya meliputi piringan parabola, LNB (Low Noise Block), BUC (Block Up Converter), dan modem Viasat. Cara kerjanya, data dikirim dari modem ke antena, lalu diteruskan ke satelit dan stasiun bumi sebelum masuk ke jaringan internet, dan sebaliknya untuk menerima data. Kelebihan antena Viasat adalah mampu menyediakan internet di daerah terpencil dengan kecepatan tinggi, namun memiliki kelemahan berupa latensi tinggi, gangguan akibat cuaca, dan biaya instalasi yang relatif mahal.
       </p>
       <a href="index.html" class="btn">Kembali ke Beranda</a>
     </section>
