--- a/antena.html
+++ b/antena.html
@@ -20,12 +20,21 @@
   <main>
     <section class="content">
       <h2>Penjelasan Tentang Antena</h2>
-      <img src="antena zodiac.PNG" alt="Antena BRIN" class="image">
-      <p>
-        Antena adalah perangkat yang digunakan untuk memancarkan atau menerima gelombang elektromagnetik.
-        Dalam penelitian BRIN, antena berperan penting untuk komunikasi, radar, dan penginderaan jauh.
+      <img src="antena1 zodiac.PNG" alt="Antena BRIN" class="image">
+       <p style="text-align: justify">
+        Berdasarkan Peraturan Presiden Nomor 78 Tahun 2021, 
+        Badan Riset dan Inovasi Nasional (BRIN) adalah lembaga pemerintah 
+        yang berada di bawah dan bertanggung jawab kepada Presiden dalam 
+        menyelenggarakan penelitian, pengembangan, pengkajian, dan penerapan, 
+        serta invensi dan inovasi, penyelenggaraan ketenaganukliran, 
+        dan penyelenggaraan keantariksaan yang terintegrasi.
+     
       </p>
-      <p>
+      <p style="text-align: justify">
+        Antena Zodiac di BRIN Parepare merupakan salah satu fasilitas utama Stasiun Bumi Penginderaan Jauh (SBPJ) yang berfungsi menerima data dari berbagai satelit penginderaan jauh. Antena ini berukuran sekitar 7,3 meter dan menggunakan frekuensi X-Band, yang umum dipakai untuk komunikasi data satelit resolusi tinggi. Dibuat oleh perusahaan asal Prancis, Antena Zodiac berperan penting dalam proses perekaman dan penerimaan data citra satelit yang kemudian digunakan untuk berbagai keperluan, seperti pemantauan cuaca, pertanian, dan pemetaan wilayah Indonesia. Terletak di kawasan strategis Parepare, Sulawesi Selatan, antena ini menjadi bagian dari sistem multimisi BRIN yang memastikan ketersediaan data penginderaan jauh nasional. Selain berfungsi teknis, antena Zodiac juga sering menjadi sarana edukasi bagi pelajar dan mahasiswa yang berkunjung untuk belajar tentang teknologi satelit dan penginderaan jauh.
+    
+    </p>
+     <p style="text-align: justify">
         BRIN terus mengembangkan antena modern seperti antena mikrostrip, antena array, dan antena adaptif
         untuk meningkatkan efisiensi komunikasi nirkabel dan teknologi satelit.
       </p>
