--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
   <title>BRIN - Badan Riset dan Inovasi Nasional</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home-bg">
   <header>
-    <h1>BRIN</h1>
+   <div class="profile">
+    
+      <p> <strong>BRIN </strong></p>
+    </div>
     <nav>
       <a href="index.html" class="active">Beranda</a>
       <a href="antena.html">Zodiac</a>
-       <a href="antena orbital.html" >Orbital</a>
-        <a href="antena viasat.html">Viasat</a>
+      <a href="antena orbital.html">Antena</a>
+      <a href="antena viasat.html">Viasat</a>
     </nav>
   </header>
 
   <main>
     <section class="hero">
       <h2>Badan Riset dan Inovasi Nasional</h2>
-      <p>
-        BRIN (Badan Riset dan Inovasi Nasional) adalah lembaga pemerintah yang mengoordinasikan
-        kegiatan riset, pengembangan, dan inovasi di Indonesia.
+<p style="text-align: justify">
+        Badan Riset dan Inovasi Nasional (BRIN) merupakan lembaga pemerintah yang berada di bawah dan bertanggung jawab kepada Presiden, sebagaimana diatur dalam Peraturan Presiden Nomor 78 Tahun 2021. BRIN dibentuk sebagai lembaga tunggal yang menyelenggarakan penelitian, pengembangan, pengkajian, penerapan, serta invensi dan inovasi secara terintegrasi, termasuk dalam bidang ketenaganukliran dan keantariksaan. Lembaga ini terbentuk dari peleburan empat lembaga besar, yaitu LIPI, BPPT, BATAN, dan LAPAN, serta lembaga riset dari berbagai kementerian, menjadikannya pusat koordinasi riset nasional. BRIN dipimpin oleh Laksana Tri Handoko, yang dilantik oleh Presiden Joko Widodo pada 28 April 2021 berdasarkan Keputusan Presiden Nomor 19/M Tahun 2021.
+
+Sebagai lembaga riset nasional, BRIN memiliki fungsi utama melaksanakan penelitian dan inovasi untuk mendukung pembangunan nasional, merumuskan kebijakan riset dan inovasi, membina sumber daya manusia di bidang ilmu pengetahuan dan teknologi, serta mengintegrasikan sistem perencanaan dan anggaran riset secara nasional. BRIN juga berperan dalam membangun ekosistem riset yang terbuka, kolaboratif, dan berkelanjutan.
+
+Arah kebijakan BRIN berfokus pada tiga hal pokok: (1) konsolidasi sumber daya manusia, infrastruktur, dan anggaran riset; (2) penciptaan ekosistem riset global yang inklusif dan kolaboratif; serta (3) pembangunan ekonomi berbasis riset dengan fokus pada ekonomi digital, hijau, dan biru. Selain itu, BRIN menetapkan tujuh target strategis, antara lain penguatan lembaga riset, transformasi manajemen riset, peningkatan nilai tambah ekonomi dari riset, pengembangan SDM unggul berbasis inovasi, dan menjadikan Indonesia sebagai pusat riset global.
+
+Untuk mendukung hal tersebut, BRIN juga melaksanakan pengintegrasian pegawai riset dari berbagai kementerian dan lembaga ke dalam struktur organisasinya, sesuai dengan Pasal 65 Peraturan Presiden Nomor 78 Tahun 2021. Langkah ini dilakukan guna menciptakan sistem riset nasional yang terpadu, efisien, dan berdaya saing tinggi, sehingga mampu menjadi fondasi utama menuju Indonesia Maju 2045.
       </p>
       <p>
         Tujuannya adalah mendorong kemajuan ilmu pengetahuan dan teknologi yang bermanfaat
